correction, add animation to collapse

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -158,6 +158,7 @@
   color: white;
 }
 .slideshow_img {
+  opacity: 1;
   width: 100%;
   height: 415px;
   object-fit: cover;
@@ -200,6 +201,27 @@
   }
 }
 
+@keyframes slidedown {
+  from {
+    transform: translateY(-2em);
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  to {
+    transform: translateY(0em);
+    opacity: 1;
+  }
+}
+@keyframes rotationInverted {
+  from {
+    transform: rotate(180deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
 .collapse {
   position: relative;
   display: flex;
@@ -228,6 +250,14 @@
 .collapse button {
   all: unset;
 }
+.collapse button .down {
+  rotate: 180deg;
+  transition: all 0.4s;
+}
+.collapse button .up {
+  animation-name: rotationInverted;
+  animation-duration: 0.5s;
+}
 @media (max-width: 640px) {
   .collapse button {
     font-size: 12px;
@@ -241,8 +271,18 @@
   background-color: rgb(250, 250, 250);
   font-size: 17px;
   z-index: 1;
+}
+.collapse-description_down {
   animation-name: slidedown;
   animation-duration: 0.4s;
+  margin-bottom: 30px;
+  transition: all 0.4s;
+}
+.collapse-description_up {
+  transform: translateY(-2rem);
+  transition: all 0.5s;
+  opacity: 0;
+  height: 0;
 }
 @media (max-width: 640px) {
   .collapse-description {
@@ -442,12 +482,10 @@
 
 .about-categories {
   display: grid;
-  gap: 30px;
   margin: 45px 14%;
 }
 @media (max-width: 640px) {
   .about-categories {
-    gap: 20px;
     margin: 7% 14%;
   }
 }
@@ -515,14 +553,15 @@
   }
   to {
     transform: translateY(0em);
+    opacity: 1;
   }
 }
-@keyframes fade {
+@keyframes rotationInverted {
   from {
-    opacity: 0;
+    transform: rotate(180deg);
   }
   to {
-    opacity: 1;
+    transform: rotate(0deg);
   }
 }
 * {
