--- a/src/style/sass/components/_collapse.scss
+++ b/src/style/sass/components/_collapse.scss
@@ -1,3 +1,5 @@
+@use '../keyframes' as *;
+
 .collapse {
     position: relative;
     display: flex;
@@ -20,6 +22,14 @@
     }
     button {
         all: unset;
+        .down {
+            rotate: 180deg;
+            transition: all 0.4s;
+        }
+        .up {
+            animation-name: rotationInverted;
+            animation-duration: 0.5s;
+        }
         @media (max-width: 640px) {
             font-size: 12px;
         }
@@ -33,8 +43,18 @@
     background-color: rgb(250, 250, 250);
     font-size: 17px;
     z-index: 1;
+    &_down {
     animation-name: slidedown;
     animation-duration: 0.4s;
+    margin-bottom: 30px;
+    transition: all 0.4s;
+    }
+    &_up {
+        transform: translateY(-2rem);
+        transition: all 0.5s;
+        opacity: 0;
+        height: 0;
+    }
     @media (max-width: 640px) {
         font-size: 13px;
         padding: 10px;
