--- a/src/style/sass/components/_slideshow.scss
+++ b/src/style/sass/components/_slideshow.scss
@@ -5,6 +5,7 @@
     position: relative;
     color: white;
     &_img {
+        opacity: 1;
         width: 100%;
         height: 415px;
         object-fit: cover;
